Add header and modal styling

--- a/index.html
+++ b/index.html
@@ -77,26 +77,26 @@
         <h3>Sign Up</h3>
       </div>
       <div class="modal-content">
-        <p>Register with us to get offers, suport and more</p>
+        <h3>Register with us to get offers, suport and more</h3>
         <form class="modal-form">
           <div>
-            <label for="name"></label>
-            <input type="text" name="name" id="name" placeholder="Enter Name">
+            <label for="name">Name</label>
+            <input type="text" name="name" id="name" class="form-input" placeholder="Enter Name">
           </div>
 
           <div>
-            <label for="email"></label>
-            <input type="text" name="email" id="email" placeholder="Enter Email">
+            <label for="email">Email</label>
+            <input type="text" name="email" id="email" class="form-input" placeholder="Enter Email">
           </div>
 
           <div>
-            <label for="password"></label>
-            <input type="password" name="password" id="password" placeholder="Enter Password">
+            <label for="password">Password</label>
+            <input type="password" name="password" id="password" class="form-input" placeholder="Enter Password">
           </div>
 
           <div>
-            <label for="password2"></label>
-            <input type="password" name="password2" id="password2" placeholder="Confirm Password">
+            <label for="password2">Confirm Password</label>
+            <input type="password" name="password2" id="password2" class="form-input" placeholder="Confirm Password">
           </div>
           <input type="submit" value="Submit" class="submit-btn">
         </form>
